// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CurrentMoment correctly 1`] = `
<span>
  12/31/69 7:00 PM
</span>
`;

exports[`should render CurrentMoment with format correctly 1`] = `
<span>
  1969
</span>
`;
